# SLAMbook

./: README.md  SLAM_for_Dummies.md
Ch10/: g2o_bal_class.h  g2o_bundle.cpp
Ch10/ceres_adjust/: CMakelists.txt  SnavelyReprojectionError.h  ceresBundle.cpp
Ch10/ceres_adjust/common/: BALProblem.h  BundleParams.h
Ch10/ceres_adjust/common/tools/: rotation.h
Ch10/common/: BALProblem.cpp  projection.h  tags
Ch10/common/flags/: command_args.cpp  command_args.h
Ch10/common/tools/: random.h  rotation.h
Ch10/g2o/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp
Ch10/g2o/common/: BundleParams.h
Ch10/g2o/common/flags/: command_args.h
Ch10/g2o/lib/: libParseCmd.dylib
Ch10/lib/: libBALProblem.dylib
Ch11/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
Ch12/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
Ch13/: dense_mapping.cpp
Ch13/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp
Ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
Ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
Ch3/: 三维空间的刚体运动.md
Ch3/Exercise/: 5.cpp  7.cpp  CMakeLists.txt
Ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
Ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
Ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
Ch4/: CMakeLists.txt  useSophus.cpp
Ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
Ch5/joinMap/: CMakeLists.txt  joinMap.cpp
Ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
Ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
Ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
Ch8/LKflow/: CMakeLists.txt  direct_semidense.cpp  useLK.cpp
Ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
Ch9/: CMakeLists.txt
Ch9/config/: default.yaml
Ch9/include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h  visual_odometry.h
Ch9/lib/: libmyslam.dylib
Ch9/src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
Ch9/test/: CMakeLists.txt  run_vo.cpp
